# raylib-zinf2025

./: CMakeLists.txt  README.md  definicoes.h  desenha_prot.c  desenha_prot.h  jogador.c  jogador.h  logica.c  logica.h  main.c  main1.c  mapa.c  mapa01.txt  mapa02.txt  mapa03.txt  mapa04.txt  mapa05.txt  mapa06.txt  mapa07.txt  monstro.c  monstro.h  processarEntrada.c  processarEntrada.h  startup.c  ui.c  ui.h
game/jogador/: espada.c  espada.h  jogador.c  jogador.h
game/mapa/: avancanivel.c  avancanivel.h  mapa.c  mapa.h
game/monstro/: monstro.c  monstro.h  montro_velho.c
graficos/: antirender.c  antirender.h  render.c  render.h
input/: processarEntrada.c  processarEntrada.h
nucleo/: definicoes.h  logica.c  placar.c  placar.h  startup.c  startup.h
ui/: ui.c  ui.h
